<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">
    <CheckBoxPreference
        android:key="pref_show_notifications"
        android:title="@string/pref_show_notifications"
        android:defaultValue="true" />

    <PreferenceCategory
        android:title="@string/pref_do_not_show_notification_constraints_title"
        android:key="pref_do_not_show_notification_constraints_category">

        <CheckBoxPreference
            android:key="pref_do_not_show_notification_constraints"
            android:title="@string/pref_do_not_show_notification_constraints"
            android:defaultValue="false" />

        <pl.mczerwi.flaresobserver.settings.NumberPickerPreference
            android:key="pref_do_not_show_notification_start_hour"
            android:title="@string/pref_do_not_show_notification_start_hour"
            android:summary="@string/pref_do_not_show_notification_start_hour_summary"
            android:defaultValue="22" />

        <pl.mczerwi.flaresobserver.settings.NumberPickerPreference
            android:key="pref_do_not_show_notification_end_hour"
            android:title="@string/pref_do_not_show_notification_end_hour"
            android:summary="@string/pref_do_not_show_notification_end_hour_summary"
            android:defaultValue="6" />
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_brightness_limit_title"
        android:key="pref_brightness_limit_category">
        <CheckBoxPreference
            android:key="pref_notification_brightness_limit"
            android:title="@string/pref_notification_brightness_limit"
            android:defaultValue="true" />

        <pl.mczerwi.flaresobserver.settings.NumberPickerPreference
            android:key="pref_notification_brightness_limit_value"
            android:title="@string/pref_notification_brightness_limit_value"
            android:summary="@string/pref_notification_brightness_limit_value_summary"

            android:defaultValue="0" />
    </PreferenceCategory>


</PreferenceScreen>